Add address information to contact section

--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@ footer{background:#05070d;text-align:center;padding:15px;font-size:13px;color:#a
     <div class="contact">
         <p>📞 9336978841</p>
         <p>📧 aryanvimal56@gmail.com</p>
+        <p>🏠address-natkur post ,chandrawal,sarojni nagar ,lucknow -226002."</p>
         <div class="buttons">
             <a href="tel:9336978841">Call Now</a>
             <a href="mailto:aryanvimal56@gmail.com">Email</a>
+            <a href="natkur post chandrawal srojni nagar lucknow-226002">address</a>
             <a href="https://wa.me/919336978841" target="_blank">WhatsApp</a>
         </div>
     </div>
